Fix css for chat table to prevent stretching for long messages on the blue scroll and classic blue theme.

--- a/style/blue_scroll/layout.css
+++ b/style/blue_scroll/layout.css
@@ -875,6 +875,8 @@ label {
     background: #0d111f;
     box-shadow: 0 0 2px #000000;
     border: 1px solid #b99e471f;
+
+    table-layout: fixed;
 }
 
 #content table.table a {
